--- a/NUnit/DynamicSpecs.NUnit.Specs/packages.config
+++ b/NUnit/DynamicSpecs.NUnit.Specs/packages.config
@@ -5,4 +5,5 @@
   <package id="FakeItEasy" version="1.18.0" targetFramework="net45" />
   <package id="FluentAssertions" version="3.4.1" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net45" />
 </packages>
