--- a/DynamicSpecs/DynamicSpecs.Core.csproj
+++ b/DynamicSpecs/DynamicSpecs.Core.csproj
@@ -42,6 +42,9 @@
     <Compile Include="ISpecify.cs" />
     <Compile Include="ISupport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkflowExtensions\Extensions.cs" />
+    <Compile Include="WorkflowExtensions\ExtensionPoint.cs" />
+    <Compile Include="WorkflowExtensions\IExtend.cs" />
     <Compile Include="WorkflowSpecification.cs">
       <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
     </Compile>
