--- a/NUnit/DynamicSpecs.NUnit.Specs/DynamicSpecs.NUnit.Specs.csproj
+++ b/NUnit/DynamicSpecs.NUnit.Specs/DynamicSpecs.NUnit.Specs.csproj
@@ -90,6 +90,11 @@
     <Compile Include="ExampleClasses\DummyClass.cs" />
     <Compile Include="ExampleClasses\IAmAServiceDummy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkflowExtensions\Factorybased\FactoryConfiguration.cs" />
+    <Compile Include="WorkflowExtensions\Factorybased\When_information_is_requested_based_on_a_factory_configuration.cs" />
+    <Compile Include="WorkflowExtensions\InformationProvider.cs" />
+    <Compile Include="WorkflowExtensions\IProvideInformation.cs" />
+    <Compile Include="WorkflowExtensions\IRequestInformation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
