--- a/NUnit/DynamicSpecs.NUnit.Specs/DynamicSpecs.NUnit.Specs.csproj
+++ b/NUnit/DynamicSpecs.NUnit.Specs/DynamicSpecs.NUnit.Specs.csproj
@@ -90,13 +90,18 @@
     <Compile Include="ExampleClasses\DummyClass.cs" />
     <Compile Include="ExampleClasses\IAmAServiceDummy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WorkflowExtensions\Factorybased\FactoryConfiguration.cs" />
-    <Compile Include="WorkflowExtensions\Factorybased\When_information_is_requested_based_on_a_factory_configuration.cs" />
-    <Compile Include="WorkflowExtensions\InformationProvider.cs" />
-    <Compile Include="WorkflowExtensions\IProvideInformation.cs" />
-    <Compile Include="WorkflowExtensions\IRequestInformation.cs" />
-    <Compile Include="WorkflowExtensions\TypeBased\TypeBasedConfiguration.cs" />
-    <Compile Include="WorkflowExtensions\TypeBased\When_information_is_requested_based_on_a_type_configuration.cs" />
+    <Compile Include="WorkflowExtensions\ExecutionTimes\DataBeforeGiven.cs" />
+    <Compile Include="WorkflowExtensions\ExecutionTimes\ExtensionSpecsBaseStructure.cs" />
+    <Compile Include="WorkflowExtensions\ExecutionTimes\IRequestDataBeforeGiven.cs" />
+    <Compile Include="WorkflowExtensions\ExecutionTimes\Configuration.cs" />
+    <Compile Include="WorkflowExtensions\ExecutionTimes\When_data_is_requested_during_type_registration.cs" />
+    <Compile Include="WorkflowExtensions\FactorybasedRegistration\FactoryConfiguration.cs" />
+    <Compile Include="WorkflowExtensions\FactorybasedRegistration\WhenDataIsRequestedBasedOnAFactoryConfiguration.cs" />
+    <Compile Include="WorkflowExtensions\DataProvider.cs" />
+    <Compile Include="WorkflowExtensions\IProvideData.cs" />
+    <Compile Include="WorkflowExtensions\IRequestData.cs" />
+    <Compile Include="WorkflowExtensions\TypebasedRegistration\TypeBasedConfiguration.cs" />
+    <Compile Include="WorkflowExtensions\TypebasedRegistration\WhenDataIsRequestedBasedOnATypeConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -115,6 +120,7 @@
       <Name>DynamicSpecs.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
