Added extension for when phase

--- a/NUnit/DynamicSpecs.NUnit.Specs/DynamicSpecs.NUnit.Specs.csproj
+++ b/NUnit/DynamicSpecs.NUnit.Specs/DynamicSpecs.NUnit.Specs.csproj
@@ -90,11 +90,14 @@
     <Compile Include="ExampleClasses\DummyClass.cs" />
     <Compile Include="ExampleClasses\IAmAServiceDummy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\DataBeforeGiven.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\ExtensionSpecsBaseStructure.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\IRequestDataBeforeGiven.cs" />
+    <Compile Include="WorkflowExtensions\ExecutionTimes\DataProvider\DataBeforeGiven.cs" />
+    <Compile Include="WorkflowExtensions\ExecutionTimes\DataProvider\DataBeforeTypeRegistration.cs" />
+    <Compile Include="WorkflowExtensions\ExecutionTimes\DataProvider\DataBeforeWhen.cs" />
+    <Compile Include="WorkflowExtensions\ExecutionTimes\Interfaces\IRequestDataBeforeGiven.cs" />
+    <Compile Include="WorkflowExtensions\ExecutionTimes\Interfaces\IRequestDataBeforeTypeRegistration.cs" />
     <Compile Include="WorkflowExtensions\ExecutionTimes\Configuration.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\When_data_is_requested_during_type_registration.cs" />
+    <Compile Include="WorkflowExtensions\ExecutionTimes\Interfaces\IRequestDataBeforeWhen.cs" />
+    <Compile Include="WorkflowExtensions\ExecutionTimes\When_data_is_requested_for_each_phase.cs" />
     <Compile Include="WorkflowExtensions\FactorybasedRegistration\FactoryConfiguration.cs" />
     <Compile Include="WorkflowExtensions\FactorybasedRegistration\WhenDataIsRequestedBasedOnAFactoryConfiguration.cs" />
     <Compile Include="WorkflowExtensions\DataProvider.cs" />
