--- a/DynamicSpecs/DynamicSpecs.Core.csproj
+++ b/DynamicSpecs/DynamicSpecs.Core.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkflowExtensions\Extensions.cs" />
     <Compile Include="WorkflowExtensions\ExtensionPoint.cs" />
-    <Compile Include="WorkflowExtensions\WorkflowStep.cs" />
+    <Compile Include="WorkflowExtensions\WorkflowSteps.cs" />
     <Compile Include="WorkflowExtensions\IExtend.cs" />
     <Compile Include="WorkflowSpecification.cs">
       <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
