update of gitignore to avoid checkin of packages

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,8 @@
 <repositories>
   <repository path="..\AutoFacItEasy\packages.config" />
   <repository path="..\MSTest\DynamicSpecs.MSTest.Specs\packages.config" />
+  <repository path="..\MSTestNuget\packages.config" />
   <repository path="..\NUnit\DynamicSpecs.NUnit.Specs\packages.config" />
   <repository path="..\NUnit\DynamicSpecs.NUnit\packages.config" />
+  <repository path="..\NUnitNuGet\packages.config" />
 </repositories>
