--- a/AutoFacItEasy/DynamicSpecs.AutoFacItEasy.csproj
+++ b/AutoFacItEasy/DynamicSpecs.AutoFacItEasy.csproj
@@ -58,7 +58,7 @@
       <Link>Properties\Shared.AssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TypeRegistration.cs" />
+    <Compile Include="TypeRegistry.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DynamicSpecs\DynamicSpecs.Core.csproj">
