--- a/NUnit/DynamicSpecs.NUnit/DynamicSpecs.NUnit.nuspec
+++ b/NUnit/DynamicSpecs.NUnit/DynamicSpecs.NUnit.nuspec
@@ -11,7 +11,7 @@
     <iconUrl>https://raw.githubusercontent.com/HerrLoesch/DynamicSpecs/master/Ressources/logo.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Initial release.</releaseNotes>
+    <releaseNotes>Added additional extension points during execution.</releaseNotes>
     <copyright>Copyright 2015 Hendrik Loesch</copyright>
     <tags>DynamicSpecs Specification Test NUnit BDD TDD</tags>
     <dependencies>
