--- a/DynamicSpecs/DynamicSpecs.Core.csproj
+++ b/DynamicSpecs/DynamicSpecs.Core.csproj
@@ -44,8 +44,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkflowExtensions\Extensions.cs" />
     <Compile Include="WorkflowExtensions\ExtensionPoint.cs" />
-    <Compile Include="WorkflowExtensions\IHandleTypes.cs" />
-    <Compile Include="WorkflowExtensions\TypeHandler.cs" />
+    <Compile Include="WorkflowExtensions\IHandleDefaultTypes.cs" />
+    <Compile Include="WorkflowExtensions\IRegisterTypesFor.cs" />
+    <Compile Include="WorkflowExtensions\DefaultTypeHandler.cs" />
+    <Compile Include="WorkflowExtensions\RequestTypeAttribute.cs" />
     <Compile Include="WorkflowExtensions\WorkflowPosition.cs" />
     <Compile Include="WorkflowExtensions\IExtend.cs" />
     <Compile Include="WorkflowSpecification.cs">
