--- a/MSTest/DynamicSpecs.MSTest/DynamicSpecs.MSTest.csproj
+++ b/MSTest/DynamicSpecs.MSTest/DynamicSpecs.MSTest.csproj
@@ -46,6 +46,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Specifies.cs" />
+    <Compile Include="SpecifiesStatically.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\AutoFacItEasy\DynamicSpecs.AutoFacItEasy.csproj">
