--- a/NUnit/DynamicSpecs.NUnit/DynamicSpecs.NUnit.csproj
+++ b/NUnit/DynamicSpecs.NUnit/DynamicSpecs.NUnit.csproj
@@ -59,6 +59,7 @@
     </Compile>
     <Compile Include="Specifies.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpecifiesStatically.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\AutoFacItEasy\DynamicSpecs.AutoFacItEasy.csproj">
