--- a/XUnit/DynamicSpecs.XUnit/DynamicSpecs.XUnit.csproj
+++ b/XUnit/DynamicSpecs.XUnit/DynamicSpecs.XUnit.csproj
@@ -57,6 +57,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+      <Compile Include="..\..\Shared.AssemblyInfo.cs">
+      <Link>Properties\Shared.AssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Specifies.cs" />
     <Compile Include="SpecifiesStatically.cs" />
