--- a/NUnit/DynamicSpecs.NUnit.Specs/DynamicSpecs.NUnit.Specs.csproj
+++ b/NUnit/DynamicSpecs.NUnit.Specs/DynamicSpecs.NUnit.Specs.csproj
@@ -82,13 +82,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicFeatures\MockConfigurationIsProvided.cs" />
+    <Compile Include="BasicFeatures\Set_data_for_container.cs" />
     <Compile Include="BasicFeatures\When_a_mock_is_used.cs" />
     <Compile Include="BasicFeatures\When_a_specification_is_created.cs" />
     <Compile Include="BasicFeatures\When_specific_instance_is_configured.cs" />
     <Compile Include="BasicFeatures\When_specific_type_is_configured.cs" />
     <Compile Include="BasicFeatures\When_static_class_is_tested.cs" />
+    <Compile Include="BasicFeatures\When_support_class_with_parameters_is_used.cs" />
+    <Compile Include="BasicFeatures\When_support_class_with_parameters_is_used_during_given_phase.cs" />
     <Compile Include="BasicFeatures\When_using_support_classes_during_given_phase.cs" />
     <Compile Include="BasicFeatures\When_using_support_classes_during_when_phase.cs" />
+    <Compile Include="ExampleClasses\DataContainer.cs" />
     <Compile Include="ExampleClasses\DummyClass.cs" />
     <Compile Include="ExampleClasses\IAmAServiceDummy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
