--- a/NUnit/DynamicSpecs.NUnit.Specs/packages.config
+++ b/NUnit/DynamicSpecs.NUnit.Specs/packages.config
@@ -4,6 +4,6 @@
   <package id="Autofac.Extras.FakeItEasy" version="3.0.3" targetFramework="net45" />
   <package id="FakeItEasy" version="1.18.0" targetFramework="net45" />
   <package id="FluentAssertions" version="3.4.1" targetFramework="net45" />
-  <package id="NUnit" version="2.6.4" targetFramework="net45" />
-  <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net45" />
+  <package id="NUnit" version="3.5.0" targetFramework="net45" />
+  <package id="NUnit3TestAdapter" version="3.4.1" targetFramework="net45" />
 </packages>
