--- a/NUnit/DynamicSpecs.NUnit/packages.config
+++ b/NUnit/DynamicSpecs.NUnit/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Autofac" version="3.3.1" targetFramework="net4" />
   <package id="FakeItEasy" version="1.18.0" targetFramework="net4" />
-  <package id="NUnit" version="3.5.0" targetFramework="net40" />
+  <package id="NUnit" version="3.5.0" targetFramework="net40" requireReinstallation="true" />
 </packages>
