--- a/XUnit/DynamicSpecs.XUnit/packages.config
+++ b/XUnit/DynamicSpecs.XUnit/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="xunit" version="2.1.0" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net452" />
-  <package id="xunit.assert" version="2.1.0" targetFramework="net452" requireReinstallation="true" />
-  <package id="xunit.core" version="2.1.0" targetFramework="net452" requireReinstallation="true" />
-  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net452" requireReinstallation="true" />
-  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="xunit.assert" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.core" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net452" />
 </packages>
