--- a/AutoFacItEasy/DynamicSpecs.AutoFacItEasy.csproj
+++ b/AutoFacItEasy/DynamicSpecs.AutoFacItEasy.csproj
@@ -59,6 +59,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeRegistry.cs" />
+    <Compile Include="TypeStoreFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DynamicSpecs\DynamicSpecs.Core.csproj">
