--- a/MSTest/DynamicSpecs.MSTest.Specs/DynamicSpecs.MSTest.Specs.csproj
+++ b/MSTest/DynamicSpecs.MSTest.Specs/DynamicSpecs.MSTest.Specs.csproj
@@ -8,7 +8,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DynamicSpecs.MSTest.Specs</RootNamespace>
     <AssemblyName>DynamicSpecs.MSTest.Specs</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -109,8 +109,8 @@
     <Compile Include="WorkflowExtensions\IRequestData.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\DynamicSpecs\DynamicSpecs.Core.csproj">
-      <Project>{5f4822a3-81c4-4cde-a802-24b37c6044f5}</Project>
+    <ProjectReference Include="..\..\DynamicSpecs.Core\DynamicSpecs.Core.csproj">
+      <Project>{2ea9d7fd-9ff7-4d44-a983-fb6bd8d960be}</Project>
       <Name>DynamicSpecs.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\DynamicSpecs.MSTest\DynamicSpecs.MSTest.csproj">
