--- a/NUnit/DynamicSpecs.NUnit.Specs/DynamicSpecs.NUnit.Specs.csproj
+++ b/NUnit/DynamicSpecs.NUnit.Specs/DynamicSpecs.NUnit.Specs.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DynamicSpecs.NUnit.Specs</RootNamespace>
     <AssemblyName>DynamicSpecs.NUnit.Specs</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
@@ -130,13 +130,13 @@
       <Project>{7aa6608f-d651-4998-84a8-7e58838fd0fd}</Project>
       <Name>DynamicSpecs.AutoFacItEasy</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\DynamicSpecs.Core\DynamicSpecs.Core.csproj">
+      <Project>{2ea9d7fd-9ff7-4d44-a983-fb6bd8d960be}</Project>
+      <Name>DynamicSpecs.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DynamicSpecs.NUnit\DynamicSpecs.NUnit.csproj">
       <Project>{715e462a-e277-4587-8764-77ba2365f4f6}</Project>
       <Name>DynamicSpecs.NUnit</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\DynamicSpecs\DynamicSpecs.Core.csproj">
-      <Project>{5f4822a3-81c4-4cde-a802-24b37c6044f5}</Project>
-      <Name>DynamicSpecs.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
